# jarvis

./: Cargo.toml  Makefile  README.md
etc/: jarvis-sysfs-permissions.service
src/jarvis/: kdtree.rs  lib.rs  process.rs
src/jarvis/ops/: sound.rs
src/jarvis/util/: errors.rs  mod.rs
